# face-recognition-api

./: .editorconfig  .gitignore  CMakeLists.txt  FaceRecognition.sln  LICENSE  README.md  Recognition.sln  TODO.md  face_detector.py  face_features.py  main.py
Recognition/: Detector.cc  Detector.hpp  Main.cpp  Recognition.vcxproj  Recognition.vcxproj.filters  main.cc
Recognition.API/: Recognition.API.vcxproj
Recognition.API/Recognition.API/: Program.cs  Startup.cs  WeatherForecast.cs
Recognition.API/Recognition.API/Controllers/: WeatherForecastController.cs
Recognition.API/Recognition.API/Properties/: launchSettings.json
Recognition.API/include/: MongoDBHandler.hpp
Recognition/include/: Detector.hpp  detector.hpp  pch.hpp
Recognition/src/: Detector.cc  detector.cc  pch.cc
python/: face_detector.py  main.py
src/: face_detector.py  main.py  utils.py
types/: window.py
